--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
 	<title>Видео</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="css/normalize.css">
@@ -14,19 +15,19 @@
         <nav class="header__main">
         	<ul class="header__nav">
 			  <li class="header__navigation">
-			    <a class="header__menu" href="index1.html">о нас</a>
+			    <a class="header__menu header__menu-btn" href="index1.html">о нас</a>
 			  </li>
 			  <li class="header__navigation header__active">
-			    <a class="header__menu" href="#">видео</a>
+			    <a class="header__menu header__menu-btn" href="#">видео</a>
 			  </li>
 			  <li class="header__navigation">
-			    <a class="header__menu" href="index2.html">регистрация</a>
+			    <a class="header__menu header__menu-btn" href="index2.html">регистрация</a>
 			  </li>
 			  <li class="header__navigation">
-			    <a class="header__menu" href="#">войти</a>
+			    <a class="header__menu header__menu-btn" href="#">войти</a>
 			  </li>
-			  <li class="header__navigation">
-			    <a class="header__menu header__menu-hamburger" href="#"></a>
+			  <li class="header__navigation header__navigation-menu">
+			    <a class=" header__menu-hamburger header__menu-btn" href="#"></a>
 			  </li>
 		    </ul>
         </nav>
