--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 	<title>Видео</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" href="css/normalize.css">
+	<!--<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="css/normalize.css">-->
+     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body class="test">
