--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="test">
 	<header class="header">
-    	<h1 class="header__logo"><span class="top-text">Тестовое</span><br> <span class="underline-text">задание</span>
+    	<h1 class="header__logo"><a href="#"><span class="top-text">Тестовое</span><br> <span class="underline-text">задание</span></a>
         </h1>
         <nav class="header__main">
         	<ul class="header__nav">
@@ -28,7 +28,7 @@
 			    <a class="header__menu header__menu-btn" href="#">войти</a>
 			  </li>
 			  <li class="header__navigation header__navigation-menu">
-			    <a class=" header__menu-hamburger header__menu-btn" href="#"></a>
+			    <a class=" header__menu-hamburger" href="#"></a>
 			  </li>
 		    </ul>
         </nav>
